--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,7 +34,7 @@
 
         <TextView
             android:id="@+id/userlogstate_message"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:text="@string/userstate_loggedout"
