--- a/app/src/main/res/layout/activity_imagecap.xml
+++ b/app/src/main/res/layout/activity_imagecap.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
@@ -22,7 +23,6 @@
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/descvpblank"
         android:visibility="gone"
         />
 
@@ -56,96 +56,79 @@
         android:padding="0dp"
         android:visibility="gone"        />
 
-    <Button
-        android:id="@+id/button2"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/custom_button"
-        android:textColor="#000000"
-        android:onClick="onButtonClick"
-        android:clickable="true"
-        android:text="@string/button_text"
-        android:visibility="gone"
-        />
 
-    <Button
-        android:id="@+id/buttonAlphaToggle"
-        style="?android:attr/buttonStyleSmall"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/button2"
-        android:background="@drawable/custom_button"
-        android:textColor="#000000"
-        android:onClick="onButtonClick"
-        android:clickable="true"
-        android:text="@string/button_alpha_toggle"
-        android:visibility="gone"
-        />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp">
 
-    <Button
-        android:id="@+id/buttonFlashTorchVpToggle"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/buttonAlphaToggle"
-        android:background="@drawable/custom_button"
-        android:textColor="#000000"
-        android:onClick="onButtonClick"
-        android:clickable="true"
-        android:text="@string/button_flash_toggle"
-        android:visibility="gone"
-        />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/buttonCallConfig"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            opencv:fabSize="mini"
+            opencv:srcCompat="@android:drawable/ic_menu_preferences"
+            opencv:backgroundTint="@android:color/holo_blue_dark"
+            android:layout_marginBottom="32dp"
+            android:visibility="visible" />
 
-    <Button
-        android:id="@+id/buttonShowVpCaptures"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/buttonFlashTorchVpToggle"
-        android:background="@drawable/custom_button"
-        android:textColor="#000000"
-        android:onClick="onButtonClick"
-        android:clickable="true"
-        android:text="@string/button_show_vp_captures"
-        android:visibility="gone"
-        />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/buttonAlphaToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            opencv:fabSize="mini"
+            opencv:srcCompat="@android:drawable/ic_menu_view"
+            opencv:backgroundTint="@android:color/holo_blue_dark"
+            android:layout_marginBottom="32dp"
+            android:visibility="visible"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/buttonShowVpCaptures"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            opencv:fabSize="mini"
+            opencv:srcCompat="@android:drawable/ic_menu_gallery"
+            opencv:backgroundTint="@android:color/holo_blue_dark"
+            android:layout_marginBottom="16dp"
+            android:visibility="visible"/>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/buttonShowPreviousVpCapture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/buttonShowVpCaptures"
-        android:background="@drawable/custom_button"
-        android:textColor="#000000"
-        android:onClick="onButtonClick"
+        android:layout_alignParentStart="true"
         android:clickable="true"
-        android:padding="0dp"
-        android:textSize="30dp"
-        android:text="@string/button_show_previous_vp_capture"
-        android:visibility="gone"
-        />
+        android:onClick="onButtonClick"
+        android:foreground="@android:drawable/ic_media_previous"
+        android:background="@drawable/circular_button"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="16dp"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/buttonShowNextVpCapture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/buttonShowPreviousVpCapture"
-        android:background="@drawable/custom_button"
-        android:textColor="#000000"
-        android:onClick="onButtonClick"
+        android:layout_alignParentEnd="true"
         android:clickable="true"
-        android:padding="0dp"
-        android:textSize="30dp"
-        android:text="@string/button_show_next_vp_capture"
-        android:visibility="gone"
-        />
+        android:onClick="onButtonClick"
+        android:foreground="@android:drawable/ic_media_next"
+        android:background="@drawable/circular_button"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="16dp"
+        android:visibility="gone"/>
+
 
     <TextView
         android:id="@+id/textView1"
@@ -255,6 +238,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/border_ar_switch"
+        android:visibility="visible"
         android:layout_margin="8dp">
 
         <Switch
