--- a/app/src/main/res/layout/activity_imagecap.xml
+++ b/app/src/main/res/layout/activity_imagecap.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
@@ -31,7 +30,6 @@
         android:padding="1dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
-        android:layout_toEndOf="@+id/imageView1"
         android:background="@android:color/transparent"
         android:layout_width="120dp" />
 
@@ -56,15 +54,12 @@
         android:padding="0dp"
         android:visibility="gone"        />
 
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp">
+        android:layout_alignParentStart="true">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/buttonCallConfig"
@@ -74,8 +69,9 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_preferences"
             opencv:backgroundTint="@android:color/holo_blue_dark"
-            android:layout_marginBottom="32dp"
-            android:visibility="visible" />
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:visibility="invisible" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/buttonAlphaToggle"
@@ -85,8 +81,9 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_view"
             opencv:backgroundTint="@android:color/holo_blue_dark"
-            android:layout_marginBottom="32dp"
-            android:visibility="visible"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:visibility="invisible"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/buttonShowVpCaptures"
@@ -96,8 +93,9 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_gallery"
             opencv:backgroundTint="@android:color/holo_blue_dark"
-            android:layout_marginBottom="16dp"
-            android:visibility="visible"/>
+            android:layout_marginBottom="32dp"
+            android:layout_marginStart="16dp"
+            android:visibility="invisible"/>
 
     </LinearLayout>
 
